a controller for all projects